tests/expected_output/clang-6.0-x86_64-pc-linux-gnu/function-definition-not-allowed-here.txt
tests/extracted_compile_time_tests/function-definition-not-allowed-here.c:5:16: error: function definition is not allowed here
int main(void) { 
               ^
dcc explanation: There is likely a closing brace (curly bracket) missing before line 5.
Is a } missing in the previous function?
  See more information here: https://comp1511unsw.github.io/dcc/function-definition-not-allowed-here.html
